@@ -22,7 +22,7 @@ set(CPACK_GENERATOR "DEB" "TGZ")
 set(CPACK_PACKAGE_NAME "weather-desktop")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
 set(CPACK_PACKAGE_VERSION_MINOR "3")
-set(CPACK_PACKAGE_VERSION_PATCH "2")
+set(CPACK_PACKAGE_VERSION_PATCH "3")
 set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
 set(DEBIAN_PACKAGE_BUILDS_DEPENDS "")
 #set(CPACK_DEBIAN_PACKAGE_SECTION "")
