@@ -27,7 +27,7 @@ bool Weather::Location::s_autoRefresh = false;
 int Weather::Location::s_refreshTime = 60 * 60 * 1000; // 1 hour
 Cache *Weather::Location::s_cache = nullptr;
 Weather::Service *Weather::Location::s_defaultService = nullptr;
-Weather::Units Weather::Location::s_units(Weather::Units::English);
+Weather::Units *Weather::Location::s_units = new Weather::Units(Weather::Units::English);
 bool Weather::Location::s_html = false;
 
 Weather::Location::Location(const QString& name, const QString& location, Weather::Service *service, QObject* parent)
@@ -65,7 +65,9 @@ Weather::Location::Location(const QString& name, const QString& location, Weathe
 	refresh();
 	// Connect slots
 	QObject::connect(this, SIGNAL(locationChanged(QString)), SLOT(onLocationChanged()));
-	QObject::connect(&s_units, SIGNAL(unitsChanged()), this, SLOT(refresh()));
+	QObject::connect(s_units, SIGNAL(unitsChanged()), this, SLOT(refresh()));
+	
+	units()->setObjectName("Initial units object");
 	// TODO: Add to global list (if there is one)
 }
 
@@ -76,6 +78,7 @@ Weather::Location::~Location()
 
 void Weather::Location::refresh()
 {
+	qDebug() << "Refresh called!";
 	if (isRefreshing()) return;
 	
 	if (location().isEmpty())
